Bug 1682483 - Make RenderCompositorD3D11SWGL::AttachExternalImage() fallible r=mattwoodrow

Make RenderCompositorD3D11SWGL::AttachExternalImage() to fallible like RenderThread::GetRenderTexture().

Differential Revision: https://phabricator.services.mozilla.com/D103422